feat: change colors when dark mode is activated

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,5 +1,11 @@
 /* Colors */
+/* https://www.nordtheme.com/docs/colors-and-palettes */
 $nord0: #2E3440;
+$nord1: #3B4252;
+$nord2: #434C5E;
+$nord0a: rgb(46, 52, 64);
+$nord4: #D8DEE9;
+$nord6: #ECEFF4;
 $nord8: #88C0D0;
 $nord8a: #76a8b6;
 $nord9: #81A1C1;
