refactor: better scss variables use

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -14,7 +14,8 @@ $light-background-color: $nord4;
 $dark-background-color: $nord2;
 $darker-background-color: rgb(46, 52, 64);
 $secondary-color: #76a8b6;
-$hover-color: #fff1;
+$hover-color: #f7f7f7;
+$dark-hover-color: #fff1;
 
 /* Spacing */
 $normal-spacing: 1rem;
